--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <div class="position" id="0"></div>
+        <div class="position" id="1"></div>
+        <div class="position" id="2"></div>
+        <div class="position" id="3"></div>
+        <div class="position" id="4"></div>
+        <div class="position" id="5"></div>
+        <div class="position" id="6"></div>
+        <div class="position" id="7"></div>
+        <div class="position" id="8"></div>
+    </div>
 </body>
 </html>
