--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="container">
+
+    <!-- <h1 class="title">TIC TAC TOE</h1>
+    <button class="start-btn">START GAME</button> -->
+
+        <h2>CHOOSE YOUR OPPONENT</h2>
+        <div class="opponent-div">
+            <div>
+                <img src="/icons/man.png" alt="man">
+                <p>HUMAN</p>
+            </div>
+            <div>
+                <img src="/icons/ai.png" alt="man">
+                <p>AI</p>
+            </div>
+            <div>
+                <img src="/icons/gigachad.png" alt="man">
+                <p>GIGACHAD</p>
+            </div>
+        </div>
+    
+    <!-- <div class="container">
         <div class="position" id="0"></div>
         <div class="position" id="1"></div>
         <div class="position" id="2"></div>
@@ -18,6 +38,6 @@
         <div class="position" id="6"></div>
         <div class="position" id="7"></div>
         <div class="position" id="8"></div>
-    </div>
+    </div> -->
 </body>
 </html>
