--- a/index.html
+++ b/index.html
@@ -9,18 +9,23 @@
 </head>
 <body>
     <!-- page 1 element -->
-    <!-- <h1 class="title">TIC TAC TOE</h1>
-    <button class="start-btn">START GAME</button> -->
+    <section id="sec-1">
+    <h1 class="title">TIC TAC TOE</h1>
+    <button class="start-btn">START GAME</button>
+    </section>
     <!-- page 1 element ends here -->
 
-     <!-- <h2>FIRST THINGS FIRST</h2>
-    <h3 class="choose-marker-txt">CHOOSE YOUR MARKER</h3>
-    <div class="choose-marker-btn">
-        <button class="x-btn">X</button>
-        <button class="o-btn">0</button>
-    </div>  -->
+    <section id="sec-2">
+        <h2>FIRST THINGS FIRST</h2>
+        <h3 class="choose-marker-txt">CHOOSE YOUR MARKER</h3>
+        <div class="choose-marker-btn">
+            <button class="x-btn">X</button>
+            <button class="o-btn">0</button>
+        </div> 
+    </section>
     <!-- page 3 elements -->
-        <!-- <h2>CHOOSE YOUR OPPONENT</h2>
+        <section id="sec-3">
+            <h2>CHOOSE YOUR OPPONENT</h2>
         <div class="opponent-div">
             <div>
                 <img src="/icons/man.png" alt="man">
@@ -34,12 +39,14 @@
                 <img src="/icons/gigachad.png" alt="man">
                 <p>GIGACHAD</p>
             </div>
-        </div>  -->
+        </div> 
+        </section>
         <!-- page 3 element ends here -->
 
 
         <!-- page 4 elements -->
-        <!-- <h2>ADD DETAILS</h2>
+        <section id="sec-4">
+            <h2>ADD DETAILS</h2>
         <form>
             <div>
                 <label for="player1">Player 1:</label>
@@ -50,29 +57,33 @@
                 <input type="text" id="player2" placeholder="Enter name">
             </div>
             <button class="play-btn">PLAY</button>
-        </form> -->
+        </form> 
+        </section>
         <!-- page 4 elements ends here -->
 
-    <div class="gb-page">
-        <div class="left-stats">
-            <img src="/icons/gigachad.png" alt="man">
-            <div class="p1-score">1</div>
+    <section id="sec-5">
+        <div class="gb-page">
+            <div class="left-stats">
+                <img src="/icons/gigachad.png" alt="man">
+                <div class="p1-score">1</div>
+            </div>
+        <div class="container">
+            <div class="position" id="0"></div>
+            <div class="position" id="1"></div>
+            <div class="position" id="2"></div>
+            <div class="position" id="3"></div>
+            <div class="position" id="4"></div>
+            <div class="position" id="5"></div>
+            <div class="position" id="6"></div>
+            <div class="position" id="7"></div>
+            <div class="position" id="8"></div>
         </div>
-    <div class="container">
-        <div class="position" id="0"></div>
-        <div class="position" id="1"></div>
-        <div class="position" id="2"></div>
-        <div class="position" id="3"></div>
-        <div class="position" id="4"></div>
-        <div class="position" id="5"></div>
-        <div class="position" id="6"></div>
-        <div class="position" id="7"></div>
-        <div class="position" id="8"></div>
-    </div>
-    <div class="right-stats">
-        <img src="/icons/ai.png" alt="man">
-        <div class="p2-score">2</div>
-    </div>
-    </div>
+        <div class="right-stats">
+            <img src="/icons/ai.png" alt="man">
+            <div class="p2-score">2</div>
+        </div>
+        </div>
+    </section>
+    
 </body>
 </html>
