add initial page interaction to reveal or show elements

--- a/index.html
+++ b/index.html
@@ -8,43 +8,39 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <!-- page 1 element -->
     <section id="sec-1">
     <h1 class="title">TIC TAC TOE</h1>
     <button class="start-btn">START GAME</button>
     </section>
-    <!-- page 1 element ends here -->
 
-    <section id="sec-2">
-        <h2>FIRST THINGS FIRST</h2>
-        <h3 class="choose-marker-txt">CHOOSE YOUR MARKER</h3>
-        <div class="choose-marker-btn">
-            <button class="x-btn">X</button>
-            <button class="o-btn">0</button>
-        </div> 
-    </section>
-    <!-- page 3 elements -->
-        <section id="sec-3">
+
+        <section id="sec-2">
             <h2>CHOOSE YOUR OPPONENT</h2>
         <div class="opponent-div">
-            <div>
+            <div id="human">
                 <img src="/icons/man.png" alt="man">
                 <p>HUMAN</p>
             </div>
-            <div>
+            <div id="ai">
                 <img src="/icons/ai.png" alt="man">
                 <p>AI</p>
             </div>
-            <div>
+            <div id="gc">
                 <img src="/icons/gigachad.png" alt="man">
                 <p>GIGACHAD</p>
             </div>
         </div> 
         </section>
-        <!-- page 3 element ends here -->
 
+        <section id="sec-3">
+            <h2>FIRST THINGS FIRST</h2>
+            <h3 class="choose-marker-txt">CHOOSE YOUR MARKER</h3>
+            <div class="choose-marker-btn">
+                <button class="x-btn">X</button>
+                <button class="o-btn">0</button>
+            </div> 
+        </section>
 
-        <!-- page 4 elements -->
         <section id="sec-4">
             <h2>ADD DETAILS</h2>
         <form>
@@ -59,7 +55,6 @@
             <button class="play-btn">PLAY</button>
         </form> 
         </section>
-        <!-- page 4 elements ends here -->
 
     <section id="sec-5">
         <div class="gb-page">
