add players input as object

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         <form>
             <div>
                 <label for="player1">Player 1:</label>
-                <input type="text" id="player1" placeholder="Enter name">
+                <input type="text" id="player1" placeholder="enter name">
             </div>
             <div>
                 <label for="player2">Player 2:</label>
-                <input type="text" id="player2" placeholder="Enter name">
+                <input type="text" id="player2" placeholder="enter name">
             </div>
-            <button class="play-btn">PLAY</button>
+            <button id="play-btn">PLAY</button>
         </form> 
         </section>
 
