--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <audio src="/audio/bullet.mp3" id="winner-audio"></audio>
     <audio src="/audio/nope.mp3" id="tie-audio"></audio>
     <audio src="/audio/u_click.mp3" id="click-audio"></audio>
+
     <section id="sec-1">
     <h1 class="title">TIC TAC TOE</h1>  
     <button class="start-btn">START GAME</button>
@@ -48,11 +49,11 @@
         <form>
             <div>
                 <label for="player1">Player 1:</label>
-                <input type="text" id="player1" placeholder="enter name">
+                <input type="text" id="player1" placeholder="enter name" required>
             </div>
             <div>
                 <label for="player2">Player 2:</label>
-                <input type="text" id="player2" placeholder="enter name">
+                <input type="text" id="player2" placeholder="enter name" required>
             </div>
             <button id="play-btn">PLAY</button>
         </form> 
