add dynamic score

--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
     <section id="sec-5">
         <p class="live-msg"></p>
         <div class="gb-page">
-            <!-- <div class="left-stats">
-                <img src="/icons/gigachad.png" alt="man">
-                <div class="p1-score">1</div>
-            </div> -->
-        <div class="container">
-   
+            <div class="left-stats">
+                <p class="p1-name"></p>
+                <h3 class="p1-score"></h3>
+            </div>
+            <div class="container">
+                
+            </div>
+            <div class="right-stats">
+            <p class="p2-name"></p>
+            <h3 class="p2-score"></h3>
         </div>
-        <!-- <div class="right-stats">
-            <img src="/icons/ai.png" alt="man">
-            <div class="p2-score">2</div>
-        </div> -->
         </div>
         <div class="buttons">
             <button class="exit">Exit</button>
